# open-javis-v2

./: CLAUDE.md  DEVELOPMENT.md  README.md  agnotest.py  main.py  main_bak.py  pyproject.toml
agents/assistant/: agent.toml
config/: javis.toml  javis.toml.example
doc/: agent.md  command.md  config.md
src/channels/: __init__.py  base.py  feishu.py  types.py
src/core/: __init__.py  agent.py  config.py  kernel.py  workspace.py
src/llm/: __init__.py  driver.py  types.py
src/memory/: __init__.py  base.py  knowledge.py  kv_store.py  semantic.py  session.py  substrate.py
src/runtime/: __init__.py  agent_loop.py
src/tools/: __init__.py  base.py  builtin.py  mcp_client.py  skills.py
